--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         >
         <ul class="menu">
           <li class="menu-item">
-            <a class="menu-link" href="">Studio</a>
+            <a class="menu-link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link" href="">Portfolio</a>
@@ -35,7 +35,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="main-contact">
         <ul class="contact">
           <li class="contact-item">
             <a class="contact-link" href="mailto:info@devstudio.com"
@@ -218,7 +218,7 @@
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer class="page-footer">
       <a class="page-logo" href="./index.html">
         Web<span class="color-black">Studio</span></a
       >
