--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <!-- Footer -->
     <footer class="page-footer">
       <a class="page-logo" href="./index.html">
-        Web<span class="color-black">Studio</span></a
+        Web<span class="color-white">Studio</span></a
       >
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
