--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="page-header">
       <nav class="page-nav">
         <a class="page-logo" href="./index.html">
-          Web<span class="color-black">Studio</span></a
+          Web<span class="color-bl">Studio</span></a
         >
         <ul class="menu">
           <li class="menu-item">
@@ -220,7 +220,7 @@
     <!-- Footer -->
     <footer class="page-footer">
       <a class="page-logo" href="./index.html">
-        Web<span class="color-white">Studio</span></a
+        Web<span class="color-wh">Studio</span></a
       >
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
